...
        tickerFetcher.tickers.remove(atOffsets: offsets)
        save(tickers: tickerFetcher.tickers)
    }

    var body: some View {
        VStack {
            Image("header").resizable().frame(width: CGFloat(200.0), height: CGFloat(70.0), alignment: .bottom).padding(.all, -15.0)
            Divider()
            ZStack {
                List {
                    ForEach(tickerFetcher.tickers, id: \Ticker.id) { ticker in
                        TickerRowUIView(ticker: ticker, needRefresh: self.$needRefresh).onTapGesture {
                            self.tempTicker = ticker
...
